--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@react-pdf/renderer": "^4.3.0",
+    "@sendgrid/mail": "^8.1.5",
+    "@supabase/supabase-js": "^2.56.0",
     "next": "15.5.0",
     "nodemailer": "^7.0.5",
     "openai": "^5.15.0",
+    "pdf-lib": "^1.17.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "zod": "^3.25.76"
